--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ILoveZappos</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_share">Share</string>
 
     <string name="sale">SALE!</string>
     <string name="title_activity_product">ProductActivity</string>
