--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="action_share">Share</string>
 
     <string name="sale">SALE!</string>
-    <string name="title_activity_product">ProductActivity</string>
+    <string name="title_activity_product">ILoveZappos</string>
 </resources>
