Icon change and minor UI fixes
Changed icon to Zappos icon form internet and changed some UI related
components such as audio icon size and color etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
 
     <string name="sale">SALE!</string>
     <string name="title_activity_product">ILoveZappos</string>
+    <string name="similaritems_text">You might also like</string>
 </resources>
