--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <string name="similaritems_text">You might also like</string>
 
     <string name="recentlyViewed">Recently Viewed Items</string>
+    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
+
+    <string name="cart_subTotals">Cart Subtotals</string>
+    <string name="Subtotal">Subtotals  $</string>
+
+    <string name="Checkout">CHECKOUT</string>
+
+    <string name="noitems">NO ITEMS IN CART</string>
 </resources>
